--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html2markdown",
+  "name": "@lerypapa/html2markdown",
   "version": "1.0.0",
   "description": "A tool to download HTML from URLs and convert it to Markdown",
   "main": "dist/index.js",
